style guide - colors

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa tenetur neque, nesciunt dolor laudantium
+        architecto. Quisquam iste adipisci dolore iusto ratione, impedit eligendi excepturi tenetur beatae culpa
+        deleniti amet tempora.</p>
 </body>
 
 </html>
