--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <html lang="pt-BR">
 
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travelgram</title>
     <link rel="stylesheet" href="styles/index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Alice&family=Poppins:wght@400;700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa tenetur neque, nesciunt dolor laudantium
-        architecto. Quisquam iste adipisci dolore iusto ratione, impedit eligendi excepturi tenetur beatae culpa
-        deleniti amet tempora.</p>
 </body>
 
 </html>
