--- a/index.html
+++ b/index.html
@@ -11,6 +11,29 @@
     <link href="https://fonts.googleapis.com/css2?family=Alice&family=Poppins:wght@400;700&display=swap"
         rel="stylesheet">
 </head>
+<nav class="container">
+    <a href="#" id="logo">
+        <img src="assets/logo.svg" alt="">
+    </a>
+    <ul id="primary-menu">
+        <li>
+            <a href="#">
+                <img src="assets/icons/MagnifyingGlass.svg" alt="Pesquisa">
+            </a>
+        </li>
+        <li>
+            <a href="#">Explorar</a>
+        </li>
+        <li>
+            <a href="#">Minhas viagens</a>
+        </li>
+        <li>
+            <a href="#">
+                <img src="assets/images/pic.png" alt="">
+            </a>
+        </li>
+    </ul>
+</nav>
 
 <body>
 </body>
