--- a/index.html
+++ b/index.html
@@ -34,6 +34,33 @@
         </li>
     </ul>
 </nav>
+<header>
+    <div class="container">
+        <div id="profile">
+            <img src="assets/images/pic.png" alt="">
+            <div>
+                <h1>Isabella Torres</h1>
+                <p>Amante de viagens, cultura e gastronomia. 🌍✈️
+                    Aqui compartilho as histórias registradas em cada clique, explorando cantinhos fascinantes do nosso
+                    planeta a partir da movimentada cidade de São Paulo. 🏙️📸</p>
+            </div>
+        </div>
+        <ul>
+            <li>
+                <img src="assets/icons/MapPin.svg" alt="">
+                <span>São Paulo, Brasil</span>
+            </li>
+            <li>
+                <img src="assets/icons/AirplaneTilt.svg" alt="">
+                <span>37 países</span>
+            </li>
+            <li>
+                <img src="assets/icons/Image.svg" alt="">
+                <span>240 fotos</span>
+            </li>
+        </ul>
+    </div>
+</header>
 
 <body>
 </body>
