--- a/index.html
+++ b/index.html
@@ -75,6 +75,13 @@
     <img src="assets/images/Image 11.png" alt="">
     <img src="assets/images/Image 12.png" alt="">
 </main>
+<footer class="container">
+    <a href="#">Travelgram © 2024</a>
+    <div class="links">
+        <a href="#">Termos de uso</a>
+        <a href="#">Política de privacidade</a>
+    </div>
+</footer>
 
 <body>
 </body>
